# natively-cluely-ai-assistant

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/migrations/: 001_users.sql  002_meetings.sql  003_embeddings.sql  004_modes.sql  005_profile.sql  006_user_kv.sql  007_search_functions.sql  008_chunks_text_meeting_id.sql
backend/src/app/: config.py  deps.py  main.py
backend/src/app/routers/: auth.py  embeddings.py  meetings.py  modes.py  profile.py  user_kv.py
backend/src/app/services/: aliyun_captcha.py  aliyun_pnvs.py  data_repo.py  jwt_service.py  rate_limiter.py  user_repo.py
electron/: AuthStorage.ts  IntelligenceManager.ts  LLMHelper.ts  MeetingPersistence.ts  WindowHelper.ts  authIpcHandlers.ts  ipcHandlers.ts  main.ts  preload.ts
electron/audio/: OpenAIStreamingSTT.ts
electron/db/: DatabaseManager.ts
electron/llm/: WhatToAnswerLLM.ts  index.ts  tinyPrompts.ts
electron/rag/: EmbeddingPipeline.ts  LiveRAGIndexer.ts  RAGManager.ts  VectorStore.ts
electron/services/: CloudClient.ts  CredentialsManager.ts  KeybindManager.ts  MeetingOutbox.ts  ModelVersionManager.ts  ModesManager.ts  PhoneMirrorService.ts  PricingTable.ts  ProfileManager.ts  SettingsManager.ts  phoneMirrorClient.ts
src/: App.tsx  main.tsx
src/_pages/: Debug.tsx  Queue.tsx  Solutions.tsx
src/components/: AboutSection.tsx  Cropper.tsx  EditableTextBlock.tsx  ErrorBoundary.tsx  FeatureSpotlight.tsx  FollowUpEmailModal.tsx  GlobalChatOverlay.tsx  Launcher.tsx  (+14 more)
(+34 files in other folders)
