[project]
name = "natively-backend"
version = "0.1.0"
description = "Backend for Natively AI Assistant — Chinese phone SMS login via Supabase + Aliyun PNVS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "alibabacloud-dypnsapi20170525>=2.0,<3.0",
    "alibabacloud-captcha20230305>=1.1,<2.0",
    "supabase>=2.9",
    "pyjwt[crypto]>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
